# backend/app/models/chat_session.rb
@@ -1,0 +1,6 @@
+class ChatSession < ApplicationRecord
+  belongs_to :user
+  has_many :messages, dependent: :destroy
+
+  validates :user_id, presence: true
+end
